--- a/style.css
+++ b/style.css
@@ -5,10 +5,17 @@ body {
     flex-direction: column;
 }
 
+.container-1 {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
 .left-side-1 {
     align-items: center;
     justify-content: center;
     flex: 1;
+    width: 500px;
 }
 
 .right-side-1 {
@@ -19,18 +26,33 @@ body {
 
 .title {
     font-size: 48px;
-    font-weight: extra-bold;
+    font-weight: bold;
     color: #f9faf8;
     justify-content: center;
+}
+
+.sub-text {
+    color: #bbbfc5;
+    max-width: 450px;
+}
+
+.sign-up {
+    margin-top: 16px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-radius: 10px;
+    border: 2px solid #3882f6;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .body-1 {
     flex-direction: row;
     display: flex;
     height: 400px;
-    flex: auto;
-
-    align-items: center;
+    justify-content: center;
 }
 
 .body-2 {
@@ -76,7 +98,7 @@ body {
 }
 
 .quote {
-    width: 600px;
+    width: 700px;
     font-size: 36px;
     font-style: italic;
     color: #697485;
@@ -86,6 +108,7 @@ body {
 .sig {
     text-align: end;
     width: 600px;
+    font-weight: bold;
 }
 
 .body-4 {
@@ -112,11 +135,13 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    max-width: 300px;
 }
 
 .right-box-4 {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
+    max-width: 300px;
 }
