--- a/style.css
+++ b/style.css
@@ -122,12 +122,13 @@ body {
 
 .container-4 {
     background-color: #3882f6;
-    border-radius: 15px;
+    border-radius: 5px;
     border: 2px solid #3882f6;
     display: flex;
     height: 100px;
     width: 800px;
     justify-content: center;
+    color: #f9faf8;
 }
 
 .left-box-4 {
@@ -138,10 +139,29 @@ body {
     max-width: 300px;
 }
 
+.call {
+    font-weight: bold;
+}
+
+.sub-call {
+    font-size: small;
+}
+
 .right-box-4 {
     flex: 1;
     display: flex;
     justify-content: right;
     align-items: center;
     max-width: 300px;
+}
+
+.sign-up-2 {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-radius: 10px;
+    border: 2px solid #f9faf8;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
