--- a/style.css
+++ b/style.css
@@ -5,9 +5,52 @@ body {
     flex-direction: column;
 }
 
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 36px;
+}
+
+.header-con {
+    width: 1016px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.logo-con {
+    justify-content: flex-start;
+    align-items: center;
+    display: flex;
+    flex: 1;
+}
+
+.logo {
+    color: #f9faf8;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header-links {
+    justify-content: flex-end;
+    align-items: center;
+    flex: 1;
+    gap: 10px;
+    display: flex;
+}
+
+header a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 16px;
+}
+
 .container-1 {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 16px;
 }
 
